--- a/html/assets/css/index.css
+++ b/html/assets/css/index.css
@@ -7,7 +7,7 @@
 
 .event-link {
     width: 30vw;
-    min-width: 200px;
+    min-width: 150px;
 
     height: auto;
 
@@ -59,10 +59,14 @@
 }
 
 .centered-info {
-    width: 60%;
+    width: 80%;
+    max-width: 600px;
+    min-width: 200px;
 
     display: flex;
     flex-direction: column;
+
+    border: 1px solid black;
 }
 
 .item p {
@@ -110,13 +114,12 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+
+    margin-bottom: 2em;
 }
 
 #race-information {
-    width: 40%;
-    min-width: 400px;
-
-    border: 1px solid black;
+    max-width: 80vw;
 }
 
 .info-item {
@@ -124,14 +127,51 @@
 
     display: flex;
     flex-direction: row;
+
+    border-left: 1px solid black;
+    border-right: 1px solid black;
+
+    text-wrap: wrap;
+}
+
+.info-item-bottom {
+    border-bottom: 1px solid black;
 }
 
 .info-item-bg-00 {
-    background-color: white;
+    background-color: #FFEFA0;
 }
 
 .info-item-bg-01 {
-    
+    background-color: #FFD57E;
+}
+
+.info-item-bg-02 {
+    background-color: #7eff9a;
+}
+
+.info-item-bg-03 {
+    background-color: #70ea8a;
+}
+
+.info-item-bg-04 {
+    background-color: #e9bbff;
+}
+
+.info-item-bg-05 {
+    background-color: #dab0ee;
+}
+
+.info-item-bg-06 {
+    background-color: hsl(8, 100%, 86%);
+}
+
+.info-item-bg-07 {
+    background-color: hsl(9, 64%, 79%);
+}
+
+.info-item-crew {
+    margin-top: 10px;
 }
 
 .info-item p {
@@ -141,9 +181,32 @@
 
 .info-item-title {
     background-color: #ffc726;
+    border-top: 1px solid black;;
+}
+
+.info-source a {
+    cursor: pointer;
+    color: rgb(0, 0, 171);
+    text-decoration: underline;
 }
 
 .info-title {
     width: 30%;
     padding: 8px;
+
+    border-right: 1px solid black;
+}
+
+.info-value {
+    width: 70%;
+
+    text-align: right;
+}
+
+#fetch-error {
+    padding: 15px;
+    text-align: center;
+    color: white;
+    text-shadow: 1px 1px black;
+    background-color: rgb(223, 0, 0);
 }
