--- a/html/assets/css/index.css
+++ b/html/assets/css/index.css
@@ -1,3 +1,7 @@
+main {
+    font-family: "Fira Mono", monospace;
+}
+
 #event-selector {
     display: flex;
     flex-direction: row;
@@ -68,7 +72,7 @@
     display: flex;
     flex-direction: column;
 
-    border: 1px solid black;
+    /* border: 1px solid black; */
 }
 
 .item p {
