--- a/html/assets/css/index.css
+++ b/html/assets/css/index.css
@@ -72,7 +72,7 @@ main {
     display: flex;
     flex-direction: column;
 
-    /* border: 1px solid black; */
+    border: 1px solid black;
 }
 
 .item p {
@@ -102,7 +102,7 @@ main {
 }
 
 .item-bg-01 {
-    background-color: rgb(226, 226, 226);
+    background-color: rgb(245, 245, 245);
 }
 
 .error {
@@ -148,7 +148,7 @@ main {
 }
 
 .info-item-bg-01 {
-    background-color: #FFD57E;
+    background-color: #ffdd7e;
 }
 
 .info-item-bg-02 {
