--- a/html/assets/css/shared.css
+++ b/html/assets/css/shared.css
@@ -114,13 +114,22 @@ footer {
     0px 6px 24px rgba(3, 7, 18, 0.01);
 }
 
-#not-found-text {
-    text-align: center;
+#not-found {
     position: absolute;
 
-    left: 50%;
     top: 30%;
+    left: 50%;
     transform: translate(-50%, -50%);
+
+    text-align: center;
+}
+
+#not-found-text {
+    text-align: center;
+    position: relative;
+
+    left: 50%;
+    transform: translate(-50%);
 
     padding: 10px;
     background-color: rgb(255, 46, 46);
@@ -132,4 +141,9 @@ footer {
 #not-found-text p {
     margin: 0;
     padding: 10px;
+}
+
+#not-found-text a {
+    text-decoration: underline;
+    color: gray;
 }
