--- a/html/assets/css/index.css
+++ b/html/assets/css/index.css
@@ -221,7 +221,9 @@
 
 #fetch-error {
     padding: 15px;
+    margin-top: 10px;
     text-align: center;
+    font-weight: bold;
     color: white;
     text-shadow: 1px 1px black;
     background-color: rgb(223, 0, 0);
